--- a/index.html
+++ b/index.html
@@ -332,20 +332,20 @@
                 <div class="banner_details_inner">
                     <div class="swiper" id="design_top_swiper">
                         <div class="swiper-wrapper">
-                            <div class="swiper-slide"><img src="./images/profile.jpg" alt=""></div>
-                            <div class="swiper-slide"><img src="./images/profile.jpg" alt=""></div>
-                            <div class="swiper-slide"><img src="./images/profile.jpg" alt=""></div>
-                            <div class="swiper-slide"><img src="./images/profile.jpg" alt=""></div>
-                            <div class="swiper-slide"><img src="./images/profile.jpg" alt=""></div>
+                            <div class="swiper-slide"><button type="button"><img src="./images/profile.jpg" alt=""></button></div>
+                            <div class="swiper-slide"><button type="button"><img src="./images/profile.jpg" alt=""></button></div>
+                            <div class="swiper-slide"><button type="button"><img src="./images/profile.jpg" alt=""></button></div>
+                            <div class="swiper-slide"><button type="button"><img src="./images/profile.jpg" alt=""></button></div>
+                            <div class="swiper-slide"><button type="button"><img src="./images/profile.jpg" alt=""></button></div>
                         </div>
                     </div>
                     <div class="swiper" id="design_bottom_swiper">
                         <div class="swiper-wrapper">
-                            <div class="swiper-slide"><img src="./images/profile.jpg" alt=""></div>
-                            <div class="swiper-slide"><img src="./images/profile.jpg" alt=""></div>
-                            <div class="swiper-slide"><img src="./images/profile.jpg" alt=""></div>
-                            <div class="swiper-slide"><img src="./images/profile.jpg" alt=""></div>
-                            <div class="swiper-slide"><img src="./images/profile.jpg" alt=""></div>
+                            <div class="swiper-slide"><button type="button"><img src="./images/profile.jpg" alt=""></button></div>
+                            <div class="swiper-slide"><button type="button"><img src="./images/profile.jpg" alt=""></button></div>
+                            <div class="swiper-slide"><button type="button"><img src="./images/profile.jpg" alt=""></button></div>
+                            <div class="swiper-slide"><button type="button"><img src="./images/profile.jpg" alt=""></button></div>
+                            <div class="swiper-slide"><button type="button"><img src="./images/profile.jpg" alt=""></button></div>
                         </div>
                     </div>
                 </div>
