--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                         <h2 class="introduction">사용자에게 <span>직관적</span>이고 <span>아름다운</span> <br>
                             <span>웹 경험</span>을 제공하는 <em>퍼블리셔</em>가 되겠습니다!</h2>
                         <div class="picture">
-                            <img src="./images/profile.jpg" alt="">
+                            <img src="./images/profile_img.jpg" alt="">
                         </div>
                         <div class="about">
                             <div class="row_top">
