--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
                     <li class="active"><button type="button">Home</button></li>
                     <li><button type="button">Profile</button></li>
                     <li><button type="button">Project</button></li>
-                    <li><button type="button">Banner&Details</button></li>
+                    <li><button type="button">Designs</button></li>
                     <li><button type="button">Contact</button></li>
                 </ul>
             </nav>
@@ -326,24 +326,28 @@
                 </div>
             </div>
             <div class="swiper-slide" id="banner_details">
-                <h2 class="title">Banner&Details</h2>
+                <h2 class="title">Designs</h2>
                 <div class="banner_details_inner">
                     <div class="swiper" id="design_top_swiper">
                         <div class="swiper-wrapper">
-                            <div class="swiper-slide"><button type="button"><img src="./images/profile.jpg" alt=""></button></div>
-                            <div class="swiper-slide"><button type="button"><img src="./images/profile.jpg" alt=""></button></div>
-                            <div class="swiper-slide"><button type="button"><img src="./images/profile.jpg" alt=""></button></div>
-                            <div class="swiper-slide"><button type="button"><img src="./images/profile.jpg" alt=""></button></div>
-                            <div class="swiper-slide"><button type="button"><img src="./images/profile.jpg" alt=""></button></div>
+                            <div class="swiper-slide"><button type="button"><img src="./images/design/design_01.jpg" alt=""></button></div>
+                            <div class="swiper-slide"><button type="button"><img src="./images/design/design_02.jpg" alt=""></button></div>
+                            <div class="swiper-slide"><button type="button"><img src="./images/design/design_03.jpg" alt=""></button></div>
+                            <div class="swiper-slide"><button type="button"><img src="./images/design/design_04.jpg" alt=""></button></div>
+                            <div class="swiper-slide"><button type="button"><img src="./images/design/design_01.jpg" alt=""></button></div>
+                            <div class="swiper-slide"><button type="button"><img src="./images/design/design_02.jpg" alt=""></button></div>
+                            <div class="swiper-slide"><button type="button"><img src="./images/design/design_03.jpg" alt=""></button></div>
+                            <div class="swiper-slide"><button type="button"><img src="./images/design/design_04.jpg" alt=""></button></div>
                         </div>
                     </div>
                     <div class="swiper" id="design_bottom_swiper">
                         <div class="swiper-wrapper">
-                            <div class="swiper-slide"><button type="button"><img src="./images/profile.jpg" alt=""></button></div>
-                            <div class="swiper-slide"><button type="button"><img src="./images/profile.jpg" alt=""></button></div>
-                            <div class="swiper-slide"><button type="button"><img src="./images/profile.jpg" alt=""></button></div>
-                            <div class="swiper-slide"><button type="button"><img src="./images/profile.jpg" alt=""></button></div>
-                            <div class="swiper-slide"><button type="button"><img src="./images/profile.jpg" alt=""></button></div>
+                            <div class="swiper-slide"><button type="button"><img src="./images/design/banner_01.png" alt=""></button></div>
+                            <div class="swiper-slide"><button type="button"><img src="./images/design/banner_02.jpg" alt=""></button></div>
+                            <div class="swiper-slide"><button type="button"><img src="./images/design/banner_03.jpg" alt=""></button></div>
+                            <div class="swiper-slide"><button type="button"><img src="./images/design/banner_01.png" alt=""></button></div>
+                            <div class="swiper-slide"><button type="button"><img src="./images/design/banner_02.jpg" alt=""></button></div>
+                            <div class="swiper-slide"><button type="button"><img src="./images/design/banner_03.jpg" alt=""></button></div>
                         </div>
                     </div>
                 </div>
@@ -363,6 +367,21 @@
             </div>
 
         </div></main>
+        <div id="popup">
+            <div class="popup_inner">
+                <button type="button" class="popup_close">
+                    <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+                        <mask id="mask0_620_7" style="mask-type:alpha" maskUnits="userSpaceOnUse" x="0" y="0" width="24" height="24">
+                        <rect width="24" height="24" fill="#D9D9D9"/>
+                        </mask>
+                        <g mask="url(#mask0_620_7)">
+                        <path d="M8.4 16.9999L7 15.5999L10.6 11.9999L7 8.4249L8.4 7.0249L12 10.6249L15.575 7.0249L16.975 8.4249L13.375 11.9999L16.975 15.5999L15.575 16.9999L12 13.3999L8.4 16.9999Z" fill="white"/>
+                        </g>
+                        </svg>                        
+                </button>
+                <img src="" alt="" class="popup_img">
+            </div>
+        </div>
         <footer></footer>
     </div>
 </body>
