--- a/index.html
+++ b/index.html
@@ -353,10 +353,12 @@
                             <div class="swiper-slide"><button type="button"><img src="./images/design/design_02.jpg" alt=""></button></div>
                             <div class="swiper-slide"><button type="button"><img src="./images/design/design_03.jpg" alt=""></button></div>
                             <div class="swiper-slide"><button type="button"><img src="./images/design/design_04.jpg" alt=""></button></div>
+                            <div class="swiper-slide"><button type="button"><img src="./images/design/design_05.jpg" alt=""></button></div>
                             <div class="swiper-slide"><button type="button"><img src="./images/design/design_01.jpg" alt=""></button></div>
                             <div class="swiper-slide"><button type="button"><img src="./images/design/design_02.jpg" alt=""></button></div>
                             <div class="swiper-slide"><button type="button"><img src="./images/design/design_03.jpg" alt=""></button></div>
                             <div class="swiper-slide"><button type="button"><img src="./images/design/design_04.jpg" alt=""></button></div>
+                            <div class="swiper-slide"><button type="button"><img src="./images/design/design_05.jpg" alt=""></button></div>
                         </div>
                     </div>
                     <div class="swiper" id="design_bottom_swiper">
