--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
                     <span class="year">2025</span>
                     <h1 class="title">Web-Publisher</h1>
                     <span class="name">Shin Joong Hoon</span>
+                    <span class="design">Design</span>
                 </div>
             </div>
             <div class="swiper-slide" id="profile">
@@ -186,7 +187,7 @@
                                     <div class="desc">
                                         <dl class="desc_period">
                                             <dt>제작기간 ::</dt>
-                                            <dd>25.11.03~</dd>
+                                            <dd>25.10.23 ~ 25.11.02 (10일) </dd>
                                         </dl>
                                         <dl class="desc_contribution">
                                             <dt>기여도 ::</dt>
@@ -217,7 +218,7 @@
                                     <div class="desc">
                                         <dl class="desc_period">
                                             <dt>제작기간 ::</dt>
-                                            <dd>25.11.03~</dd>
+                                            <dd>25.11.03 ~ 25.11.17 (2주)</dd>
                                         </dl>
                                         <dl class="desc_contribution">
                                             <dt>기여도 ::</dt>
@@ -249,7 +250,7 @@
                                     <div class="desc">
                                         <dl class="desc_period">
                                             <dt>제작기간 ::</dt>
-                                            <dd>2주</dd>
+                                            <dd>25.10.01 ~ 25.10.15 (2주)</dd>
                                         </dl>
                                         <dl class="desc_contribution">
                                             <dt>기여도 ::</dt>
@@ -295,7 +296,7 @@
                                     <div class="desc">
                                         <dl class="desc_period">
                                             <dt>제작기간 ::</dt>
-                                            <dd>2주</dd>
+                                            <dd>25.11.19 ~ 25.11.29 (10일)</dd>
                                         </dl>
                                         <dl class="desc_contribution">
                                             <dt>기여도 ::</dt>
@@ -366,9 +367,11 @@
                             <div class="swiper-slide"><button type="button"><img src="./images/design/banner_01.png" alt=""></button></div>
                             <div class="swiper-slide"><button type="button"><img src="./images/design/banner_02.jpg" alt=""></button></div>
                             <div class="swiper-slide"><button type="button"><img src="./images/design/banner_03.jpg" alt=""></button></div>
+                            <div class="swiper-slide"><button type="button"><img src="./images/design/banner_04.jpg" alt=""></button></div>
                             <div class="swiper-slide"><button type="button"><img src="./images/design/banner_01.png" alt=""></button></div>
                             <div class="swiper-slide"><button type="button"><img src="./images/design/banner_02.jpg" alt=""></button></div>
                             <div class="swiper-slide"><button type="button"><img src="./images/design/banner_03.jpg" alt=""></button></div>
+                            <div class="swiper-slide"><button type="button"><img src="./images/design/banner_04.jpg" alt=""></button></div>
                         </div>
                     </div>
                 </div>
