--- a/index.html
+++ b/index.html
@@ -308,7 +308,7 @@
                                         </dl>
                                     </div>
                                     <div class="proto_btn">
-                                        <a href="#" class="prototype" target="_blank">프로토타입</a>
+                                        <a href="https://www.figma.com/proto/DzZJc8ZZPHrh8Bll9zK8Ot/%EC%82%BC%EC%84%B1-%EB%9D%BC%EC%9D%B4%EC%98%A8%EC%A6%88-Redesign?page-id=2%3A58&node-id=54-226&p=f&viewport=472%2C240%2C0.15&t=H3UalUII7rwKMa5L-1&scaling=min-zoom&content-scaling=fixed" class="prototype" target="_blank">프로토타입</a>
                                         <a href="https://www.figma.com/proto/DzZJc8ZZPHrh8Bll9zK8Ot/%EC%82%BC%EC%84%B1-%EB%9D%BC%EC%9D%B4%EC%98%A8%EC%A6%88-Redesign?page-id=2%3A58&node-id=54-226&p=f&viewport=472%2C240%2C0.15&t=H3UalUII7rwKMa5L-1&scaling=min-zoom&content-scaling=fixed" class="figma" target="_blank">피그마</a>
                                         <a href="https://www.samsunglions.com/index.asp" class="original_site" target="_blank">원본사이트<img src="./images/arrow_upward_alt.png" alt=""></a>
                                     </div>
