--- a/index.html
+++ b/index.html
@@ -204,10 +204,11 @@
                                         <a href="https://www.3cecosmetics.com/"target="_blank"  class="original_site">원본사이트<img src="./images/arrow_upward_alt.png" alt=""></a>
                                     </div>
                                 </div>
-                                <div class="desktop_mockup"><img src="./images/mockup/3ce_mockup.png" alt=""></div>
-                                <div class="tablet_mockup"><img src="./images/mockup/3ce_tablet_mockup.png" alt=""></div>
-                                <div class="phone_mockup"><img src="./images/mockup/3ce_mobile_mockup.png" alt=""></div>
-                                <div class="project_bg"></div>
+                                <div class="project_bg">
+                                    <div class="desktop_mockup"><img src="./images/mockup/3ce_mockup.png" alt=""></div>
+                                    <div class="tablet_mockup"><img src="./images/mockup/3ce_tablet_mockup.png" alt=""></div>
+                                    <div class="phone_mockup"><img src="./images/mockup/3ce_mobile_mockup.png" alt=""></div>
+                                </div>
                             </div>
                             <div class="swiper-slide project_02">
                                 <div class="left_info">
@@ -235,8 +236,9 @@
                                         <a href="http://namooactors.com/" class="original_site"target="_blank">원본사이트<img src="./images/arrow_upward_alt.png" alt=""></a>
                                     </div>
                                 </div>
-                                <div class="desktop_mockup"><img src="./images/mockup/namoo_mockup.png" alt=""></div>
-                                <div class="project_bg"></div>
+                                <div class="project_bg">
+                                    <div class="desktop_mockup"><img src="./images/mockup/namoo_mockup.png" alt=""></div>
+                                </div>
                             </div>
                             
                             <div class="swiper-slide project_03">
@@ -284,8 +286,9 @@
                                         <a href="https://www.style24.com/display/brand/main/form?brandGroupNo=950&utm_source=moimoln&utm_medium=owned&utm_campaign=moimoln_site" class="original_site" target="_blank">원본사이트<img src="./images/arrow_upward_alt.png" alt=""></a>
                                     </div>
                                 </div>
-                                <div class="desktop_mockup"><img src="./images/mockup/moimoln_mockup.png" alt=""></div>
-                                <div class="project_bg"></div>
+                                <div class="project_bg">
+                                    <div class="desktop_mockup"><img src="./images/mockup/moimoln_mockup.png" alt=""></div>
+                                </div>
                             </div>
                             <div class="swiper-slide project_04">
                                 <div class="left_info">
@@ -313,8 +316,9 @@
                                         <a href="https://www.samsunglions.com/index.asp" class="original_site" target="_blank">원본사이트<img src="./images/arrow_upward_alt.png" alt=""></a>
                                     </div>
                                 </div>
-                                <div class="desktop_mockup"><img src="./images/mockup/lions_mockup.png" alt=""></div>
-                                <div class="project_bg"></div>
+                                <div class="project_bg">
+                                    <div class="desktop_mockup"><img src="./images/mockup/lions_mockup.png" alt=""></div>
+                                </div>
                             </div>
                         </div>
                         <div class="pagination_btn">
