--- a/index.html
+++ b/index.html
@@ -299,7 +299,7 @@
                                     <div class="desc">
                                         <dl class="desc_period">
                                             <dt>제작기간 ::</dt>
-                                            <dd>25.11.19 ~ 25.11.29 (10일)</dd>
+                                            <dd>~ 진행중</dd>
                                         </dl>
                                         <dl class="desc_contribution">
                                             <dt>기여도 ::</dt>
