--- a/index.html
+++ b/index.html
@@ -281,7 +281,7 @@
                                         </dl>
                                     </div>
                                     <div class="proto_btn">
-                                        <a href="https://tlswndgns09.cafe24.com/" class="prototype" target="_blank">프로토타입</a>
+                                        <a href="https://tlswndgns09.cafe24.com/" class="prototype" target="_blank">프로토타입(CAFE24)</a>
                                         <a href="https://www.figma.com/proto/52a7YKFdW2WyaqFM6Gr6b7/%EB%AA%A8%EC%9D%B4%EB%AA%B0%EB%A1%A0-%EB%A6%AC%EB%94%94%EC%9E%90%EC%9D%B8?page-id=788%3A2&node-id=788-3&viewport=498%2C365%2C0.12&t=31cU5rHjuor785qm-1&scaling=min-zoom&content-scaling=fixed" class="figma" target="_blank">피그마</a>
                                         <a href="https://www.style24.com/display/brand/main/form?brandGroupNo=950&utm_source=moimoln&utm_medium=owned&utm_campaign=moimoln_site" class="original_site" target="_blank">원본사이트<img src="./images/arrow_upward_alt.png" alt=""></a>
                                     </div>
